# Mini-WSPR

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/M5Cardputer/src/: M5Cardputer.cpp
components/M5Cardputer/src/utility/Adafruit_TCA8418/: Adafruit_TCA8418.cpp  Adafruit_TCA8418.h
components/M5Cardputer/src/utility/Keyboard/KeyboardReader/: TCA8418.cpp
components/M5GFX/: CMakeLists.txt
components/M5Unified/: CMakeLists.txt
components/ch340_usb_serial/: CMakeLists.txt  ch340_usb_serial.cpp
components/ch340_usb_serial/include/: ch340_usb_serial.h
components/ft8_lib/common/: monitor.c
components/ui/: CMakeLists.txt  mic_input.cpp  mic_input.h  ter_u20b_lvgl.c  ter_u20b_lvgl.h  ui.cpp
components/ui/include/: ui.h
docs/superpowers/plans/: 2026-06-13-wspr-device-integration.md  2026-06-13-wspr-device-logic.md  2026-06-13-wspr-encoder.md
docs/superpowers/specs/: 2026-06-13-wspr-beacon-design.md
host_mock/: .gitignore  Makefile  build_and_test.sh  build_device.sh  roundtrip_wspr.sh  test_device_logic.c  test_wspr_encode.c  wspr_golden.h  wspr_render.c
main/: CMakeLists.txt  audio_source.cpp  audio_source.h  audio_trusdx_serial.cpp  audio_trusdx_serial.h  autoseq.cpp  autoseq.h  core_api.h  core_api_internal.h  ft8_audio_pipeline.cpp  ft8_tx_synth.cpp  ft8_tx_synth.h  gps.cpp  idf_component.yml  main.cpp  radio_control.cpp  radio_control.h  radio_control_backend.h  radio_control_kh1_cat.cpp  radio_control_qmx.cpp  radio_trusdx.cpp  radio_trusdx.h  resample.cpp  resample.h  stream_uac.cpp  tx_synth.c  tx_synth.h  wspr_app.cpp  wspr_band.c  wspr_band.h  wspr_beacon.c  wspr_beacon.h  wspr_encode.c  wspr_encode.h  wspr_encode_internal.h  wspr_sched.c  wspr_sched.h  wspr_sync.h  wspr_time.c  wspr_time.h
tools/: wspr_ref.py
